fixing bugs from login jwt plus fixing adding role to user and creating Category and Products